// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemSelectedLabel renders correctly renders correctly with a currency selected 1`] = `
<View
  style={
    {
      "alignContent": "center",
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "padding": 15,
      "width": "100%",
    }
  }
>
  <Text
    style={
      {
        "color": "#424242",
        "fontSize": 20,
        "fontWeight": "bold",
      }
    }
  >
    January
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        {
          "color": "#1A237E",
          "fontSize": 20,
          "fontWeight": "bold",
        }
      }
    >
      1.2345€
    </Text>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#1A237E",
          "borderRadius": 15,
          "marginLeft": 10,
          "opacity": 1,
          "padding": 5,
        }
      }
      testID="ItemSelectedLabel.ToucableOpacity"
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "#ffffff",
              "fontSize": 20,
            },
            undefined,
            {
              "fontFamily": "FontAwesome",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`ItemSelectedLabel renders correctly renders correctly with a stock selected 1`] = `
<View
  style={
    {
      "alignContent": "center",
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "padding": 15,
      "width": "100%",
    }
  }
>
  <Text
    style={
      {
        "color": "#424242",
        "fontSize": 20,
        "fontWeight": "bold",
      }
    }
  >
    January
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        {
          "color": "#1A237E",
          "fontSize": 20,
          "fontWeight": "bold",
        }
      }
    >
      100.2345$
    </Text>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#1A237E",
          "borderRadius": 15,
          "marginLeft": 10,
          "opacity": 1,
          "padding": 5,
        }
      }
      testID="ItemSelectedLabel.ToucableOpacity"
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "#ffffff",
              "fontSize": 20,
            },
            undefined,
            {
              "fontFamily": "FontAwesome",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;
